src/bindings_windows_x86.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _OVERLAPPED__bindgen_ty_1__bindgen_ty_1"]
        [::std::mem::size_of::<_OVERLAPPED__bindgen_ty_1__bindgen_ty_1>() - 8usize];
    ["Alignment of _OVERLAPPED__bindgen_ty_1__bindgen_ty_1"]
        [::std::mem::align_of::<_OVERLAPPED__bindgen_ty_1__bindgen_ty_1>() - 4usize];
    ["Offset of field: _OVERLAPPED__bindgen_ty_1__bindgen_ty_1::Offset"]
        [::std::mem::offset_of!(_OVERLAPPED__bindgen_ty_1__bindgen_ty_1, Offset) - 0usize];
    ["Offset of field: _OVERLAPPED__bindgen_ty_1__bindgen_ty_1::OffsetHigh"]
        [::std::mem::offset_of!(_OVERLAPPED__bindgen_ty_1__bindgen_ty_1, OffsetHigh) - 4usize];
};
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _OVERLAPPED__bindgen_ty_1"]
        [::std::mem::size_of::<_OVERLAPPED__bindgen_ty_1>() - 8usize];
    ["Alignment of _OVERLAPPED__bindgen_ty_1"]
        [::std::mem::align_of::<_OVERLAPPED__bindgen_ty_1>() - 4usize];
    ["Offset of field: _OVERLAPPED__bindgen_ty_1::Pointer"]
        [::std::mem::offset_of!(_OVERLAPPED__bindgen_ty_1, Pointer) - 0usize];
};
impl Default for _OVERLAPPED__bindgen_ty_1 {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _OVERLAPPED"][::std::mem::size_of::<_OVERLAPPED>() - 20usize];
    ["Alignment of _OVERLAPPED"][::std::mem::align_of::<_OVERLAPPED>() - 4usize];
    ["Offset of field: _OVERLAPPED::Internal"]
        [::std::mem::offset_of!(_OVERLAPPED, Internal) - 0usize];
    ["Offset of field: _OVERLAPPED::InternalHigh"]
        [::std::mem::offset_of!(_OVERLAPPED, InternalHigh) - 4usize];
    ["Offset of field: _OVERLAPPED::hEvent"][::std::mem::offset_of!(_OVERLAPPED, hEvent) - 16usize];
};
impl Default for _OVERLAPPED {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
pub type LPOVERLAPPED = *mut _OVERLAPPED;
pub type FT_HANDLE = PVOID;
pub type FT_STATUS = ULONG;
pub const FT_OK: _bindgen_ty_4 = 0;
pub const FT_INVALID_HANDLE: _bindgen_ty_4 = 1;
pub const FT_DEVICE_NOT_FOUND: _bindgen_ty_4 = 2;
pub const FT_DEVICE_NOT_OPENED: _bindgen_ty_4 = 3;
pub const FT_IO_ERROR: _bindgen_ty_4 = 4;
pub const FT_INSUFFICIENT_RESOURCES: _bindgen_ty_4 = 5;
pub const FT_INVALID_PARAMETER: _bindgen_ty_4 = 6;
pub const FT_INVALID_BAUD_RATE: _bindgen_ty_4 = 7;
pub const FT_DEVICE_NOT_OPENED_FOR_ERASE: _bindgen_ty_4 = 8;
pub const FT_DEVICE_NOT_OPENED_FOR_WRITE: _bindgen_ty_4 = 9;
pub const FT_FAILED_TO_WRITE_DEVICE: _bindgen_ty_4 = 10;
pub const FT_EEPROM_READ_FAILED: _bindgen_ty_4 = 11;
pub const FT_EEPROM_WRITE_FAILED: _bindgen_ty_4 = 12;
pub const FT_EEPROM_ERASE_FAILED: _bindgen_ty_4 = 13;
pub const FT_EEPROM_NOT_PRESENT: _bindgen_ty_4 = 14;
pub const FT_EEPROM_NOT_PROGRAMMED: _bindgen_ty_4 = 15;
pub const FT_INVALID_ARGS: _bindgen_ty_4 = 16;
pub const FT_NOT_SUPPORTED: _bindgen_ty_4 = 17;
pub const FT_OTHER_ERROR: _bindgen_ty_4 = 18;
pub const FT_DEVICE_LIST_NOT_READY: _bindgen_ty_4 = 19;
pub type _bindgen_ty_4 = ::std::os::raw::c_int;
pub type FT_DEVICE = ULONG;
pub const FT_DEVICE_BM: _bindgen_ty_5 = 0;
pub const FT_DEVICE_AM: _bindgen_ty_5 = 1;
pub const FT_DEVICE_100AX: _bindgen_ty_5 = 2;
pub const FT_DEVICE_UNKNOWN: _bindgen_ty_5 = 3;
pub const FT_DEVICE_2232C: _bindgen_ty_5 = 4;
pub const FT_DEVICE_232R: _bindgen_ty_5 = 5;
pub const FT_DEVICE_2232H: _bindgen_ty_5 = 6;
pub const FT_DEVICE_4232H: _bindgen_ty_5 = 7;
pub const FT_DEVICE_232H: _bindgen_ty_5 = 8;
pub const FT_DEVICE_X_SERIES: _bindgen_ty_5 = 9;
pub const FT_DEVICE_4222H_0: _bindgen_ty_5 = 10;
pub const FT_DEVICE_4222H_1_2: _bindgen_ty_5 = 11;
pub const FT_DEVICE_4222H_3: _bindgen_ty_5 = 12;
pub const FT_DEVICE_4222_PROG: _bindgen_ty_5 = 13;
pub const FT_DEVICE_900: _bindgen_ty_5 = 14;
pub const FT_DEVICE_930: _bindgen_ty_5 = 15;
pub const FT_DEVICE_UMFTPD3A: _bindgen_ty_5 = 16;
pub const FT_DEVICE_2233HP: _bindgen_ty_5 = 17;
pub const FT_DEVICE_4233HP: _bindgen_ty_5 = 18;
pub const FT_DEVICE_2232HP: _bindgen_ty_5 = 19;
pub const FT_DEVICE_4232HP: _bindgen_ty_5 = 20;
pub const FT_DEVICE_233HP: _bindgen_ty_5 = 21;
pub const FT_DEVICE_232HP: _bindgen_ty_5 = 22;
pub const FT_DEVICE_2232HA: _bindgen_ty_5 = 23;
pub const FT_DEVICE_4232HA: _bindgen_ty_5 = 24;
pub const FT_DEVICE_232RN: _bindgen_ty_5 = 25;
pub type _bindgen_ty_5 = ::std::os::raw::c_int;
unsafe extern "stdcall" {
    pub fn FT_Open(deviceNumber: ::std::os::raw::c_int, pHandle: *mut FT_HANDLE) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_OpenEx(pArg1: PVOID, Flags: DWORD, pHandle: *mut FT_HANDLE) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_ListDevices(pArg1: PVOID, pArg2: PVOID, Flags: DWORD) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_Close(ftHandle: FT_HANDLE) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_Read(
        ftHandle: FT_HANDLE,
        lpBuffer: LPVOID,
        dwBytesToRead: DWORD,
        lpBytesReturned: LPDWORD,
    ) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_Write(
        ftHandle: FT_HANDLE,
        lpBuffer: LPVOID,
        dwBytesToWrite: DWORD,
        lpBytesWritten: LPDWORD,
    ) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_IoCtl(
        ftHandle: FT_HANDLE,
        dwIoControlCode: DWORD,
        lpInBuf: LPVOID,
        nInBufSize: DWORD,
        lpOutBuf: LPVOID,
        nOutBufSize: DWORD,
        lpBytesReturned: LPDWORD,
        lpOverlapped: LPOVERLAPPED,
    ) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_SetBaudRate(ftHandle: FT_HANDLE, BaudRate: ULONG) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_SetDivisor(ftHandle: FT_HANDLE, Divisor: USHORT) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_SetDataCharacteristics(
        ftHandle: FT_HANDLE,
        WordLength: UCHAR,
        StopBits: UCHAR,
        Parity: UCHAR,
    ) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_SetFlowControl(
        ftHandle: FT_HANDLE,
        FlowControl: USHORT,
        XonChar: UCHAR,
        XoffChar: UCHAR,
    ) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_ResetDevice(ftHandle: FT_HANDLE) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_SetDtr(ftHandle: FT_HANDLE) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_ClrDtr(ftHandle: FT_HANDLE) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_SetRts(ftHandle: FT_HANDLE) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_ClrRts(ftHandle: FT_HANDLE) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_GetModemStatus(ftHandle: FT_HANDLE, pModemStatus: *mut ULONG) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_SetChars(
        ftHandle: FT_HANDLE,
        EventChar: UCHAR,
        EventCharEnabled: UCHAR,
        ErrorChar: UCHAR,
        ErrorCharEnabled: UCHAR,
    ) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_Purge(ftHandle: FT_HANDLE, Mask: ULONG) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_SetTimeouts(
        ftHandle: FT_HANDLE,
        ReadTimeout: ULONG,
        WriteTimeout: ULONG,
    ) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_GetQueueStatus(ftHandle: FT_HANDLE, dwRxBytes: *mut DWORD) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_SetEventNotification(ftHandle: FT_HANDLE, Mask: DWORD, Param: PVOID) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_GetStatus(
        ftHandle: FT_HANDLE,
        dwRxBytes: *mut DWORD,
        dwTxBytes: *mut DWORD,
        dwEventDWord: *mut DWORD,
    ) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_SetBreakOn(ftHandle: FT_HANDLE) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_SetBreakOff(ftHandle: FT_HANDLE) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_SetWaitMask(ftHandle: FT_HANDLE, Mask: DWORD) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_WaitOnMask(ftHandle: FT_HANDLE, Mask: *mut DWORD) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_GetEventStatus(ftHandle: FT_HANDLE, dwEventDWord: *mut DWORD) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_ReadEE(ftHandle: FT_HANDLE, dwWordOffset: DWORD, lpwValue: LPWORD) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_WriteEE(ftHandle: FT_HANDLE, dwWordOffset: DWORD, wValue: WORD) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_EraseEE(ftHandle: FT_HANDLE) -> FT_STATUS;
}
